@@ -1,3 +1,9 @@
+2006-12-29  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* providerMgr.c: 
+	Fixed 1623382: provider manager incorrectly returned not-found status
+	for interop namespace associations.
+
 2006-12-28  Sven Schuetz
 	* cimXmlGen.c:
 	applied patch from Adrian Schuur
